# mediaforge

./: .dockerignore  .gitattributes  Cargo.toml  Dockerfile  PLAN.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
contrib/: mediaforge.service
scripts/: test_api.sh
src/: cleanup.rs  main.rs  watcher.rs
src/api/: error.rs  helpers.rs  mod.rs  routes.rs
src/api/routes/: library.rs  metadata.rs  mod.rs  playback.rs  streaming.rs  system.rs
src/config/: mod.rs
src/db/: mod.rs  models.rs
src/ffmpeg/: mod.rs
src/hls/: mod.rs
src/metadata/: mod.rs
src/scanner/: mod.rs
