[package]
name = "mediaforge"
version = "0.1.0"
edition = "2024"
description = "Personal media server with HLS streaming, transcoding, and TMDB metadata"
license = "MIT"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
hyper = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# HTTP client (for TMDB)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# File watching
notify = "7"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
regex = "1"
thiserror = "2"
anyhow = "1"
once_cell = "1"
dashmap = "6"
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
mime_guess = "2"

# Config
toml = "0.8"
dirs = "6"

# CLI
clap = { version = "4", features = ["derive"] }
