[package]
name = "mediaforge"
version = "0.1.0"
edition = "2024"
description = "Personal media server with HLS streaming, transcoding, and TMDB metadata"
license = "GPL-3.0"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros", "multipart", "ws"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
hyper = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# HTTP client (for TMDB)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
regex = "1"
anyhow = "1"
percent-encoding = "2"
dashmap = "6"
jpeg-decoder = "0.3"
tokio-util = { version = "0.7", features = ["io", "rt"] }
mime_guess = "2"

# Config
toml = "0.8"
dirs = "6"

# CLI
clap = { version = "4", features = ["derive"] }
notify = { version = "8.2.0", features = ["macos_kqueue"] }

# OpenAPI
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum"] }

[dev-dependencies]
tempfile = "3"
